--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Binary Decoder Practice Tool</title>
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -116,7 +116,7 @@
     </section>
   </main>
 
-  <script src="js/nor.js"></script>
+  <script src="nor.js"></script>
   <script>
     window.addEventListener("DOMContentLoaded", () => {
       generateDecoderQuestion();
